Bug 1330470 - Restore ability to drag & drop entries from the download list to Finder on OSX. r=mstange, a=jcristau